--- a/assignments/assignment01.Rmd
+++ b/assignments/assignment01.Rmd
@@ -11,11 +11,11 @@ output: html_document
 
 ### Submission Requirements
 
-Please upload below two files on Canvas before TBD time:  
+Please upload below two files on Canvas:  
 
  * An .html or .pdf file that includes both - 
    + your typed responses (in your own words and not identical to anybody else's), tables, and/or figures to the problems  
-   + and the R code chunks that generated your answers (hint: if you choose to compose your answers in markdown, simply set up echo = TRUE, include = TRUE in you .Rmd file)  
+   + and the R code chunks that generated your answers (hint: if you choose to compose your answers in Rmarkdown, simply set up echo = TRUE, include = TRUE in you .Rmd file)  
    
  * The .Rmd or .R file that you used to render the tables and figures in the above html/pdf. 
 
@@ -33,7 +33,7 @@ While the primary goals of the PD intervention were to improve language and lite
 
 The paired assignments 1 and 2 will ask you to answer a few research questions: Were the students less likely to be chronically absent if there teachers participated the consultancy PD intervention? Were the female students less likely to be chronically absent if there teachers participated in the consultancy PD intervention? How about the male students?
 
-**Sample**. Our dataset is student-level data for 942 preschool students, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main paper.
+**Sample**. Our dataset is student-level data for 942 preschool students, which is the same sample used in the original Hanno and Gonzalez (2020) paper. The authors test several approaches to compute the outcome variable, chronic absenteeism, since some key information on full year absent days is not publicly available. For simplifying reasons, the approach we use in our sample is one from the robustness check rather the one used in the main results of their paper.
 
 **Key variables**. The outcome measure in our data is whether a student is "chronically absent" from school. In many jurisdictions, students are labelled "chronically absent" if they miss 10 percent or more of the school year. Given the typical 180-day school, students are, therefore, defined as chronically absent if they miss 18 or more days in a year. 
 
@@ -55,7 +55,7 @@ Open your RStudio, create a project and save it. Go to the root directory of the
 2.1. Write your own code to view the dataset and write 3-4 sentences about the structure of the data (how many variables are there, what is the current type of each variable and what the type should be, how many rows/observations, etc.).
 
 
-2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor and label them consistently with the data background information above. 
+2.2. Write your own code to transform the variables, *treat*, *absenteeism*, and *cgender* into factor variables and label them consistently with the data background information above. 
 
 #### 3. Describe and summarize the two key variables
 
