--- a/slides/EDUC641_6_history.Rmd
+++ b/slides/EDUC641_6_history.Rmd
@@ -81,6 +81,6 @@ class: middle, inverse
 - Complete R Bootcamp Module 8 (dataframes)
 
 ### Assignments
-- Assignment #2 Due TBD
+- Assignment #2 Due October 17, 11:59pm
 
 
