--- a/slides/EDUC641_14_continuousrel.Rmd
+++ b/slides/EDUC641_14_continuousrel.Rmd
@@ -748,11 +748,11 @@ class: middle, inverse
 - Conduct a statistical inference test of the slope and intercept of a bivariate regression model
 - Write R scripts to conduct these analyses
 
-----
+---
 # To Dos
 
 ### Reading
 LSWR Chapter 15.1 and 15.2: bivariate regression
 
 ### Assignments
-Assignment #4 Due TBD
+Assignment #4 Due November 28 at 11:59PM
