--- a/slides/EDUC641_4_categrel.Rmd
+++ b/slides/EDUC641_4_categrel.Rmd
@@ -671,6 +671,6 @@ class: middle, inverse
 - Complete R Bootcamp Module 7 (lists)
 
 ### Assignments
-- Assignment #2 Due TBD
+- Assignment #2 Due October 17, 11:59pm
 
 
