--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -13,7 +13,9 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-**Note: readings are intended to be completed *after* subject is covered by class lecture. You are welcome to read them in advance and encouraged to preview the slides prior to that unit's lectures.**
+**Note: readings are intended to be completed *after* subject is covered by class lecture; however, you are welcome to read them in advance. You are encouraged to preview the slides prior to that unit's lectures.**
+
+*We have provided the lecture slides in .html and .pdf format. Some of the slide features will only work in .html format while connected to the internet. Feel free to download the PDFs for later use (you'll miss out on animations and interactivities, but most information will render correctly).*
 
 ## Unit 0
 
