--- a/slides/EDUC641_1_intro.Rmd
+++ b/slides/EDUC641_1_intro.Rmd
@@ -84,7 +84,13 @@ options(knitr.table.format = "html")
  + "Building a toolbox, not a cookbook"
  + Evaluate the credibility of published research
  + Understand the affordances, limitations and dangers of quantitative analysis
- 
+
+--
+
+.blue[This is an entirely re-designed and modernized core quantitative sequence at the COE. We welcome your feedback!] 
+
+.blue[Given the new-ness of these three courses, there are likely to be shortcomings. We are committed to solving them as they arise, but we ask for your grace in allowing us to do so. In the end, we think this will be a better experience for you and your future program-mates.]
+
 ---
 # Pedagogical orientation of EDUC
 
@@ -114,6 +120,40 @@ Concrete learning objectives:
 4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
 5. Describe strategies to improve the replicability and generalizability of quantitative research
 6. Use the R programming language to conduct all such analyses
+
+---
+# My personal goals
+
+- Over next two terms, teach you the basics of applied statistics
+- Challenge you
+  + These courses assume .blue[*no prior knowledge*] beyond high-school Algebra I
+  + Thus, I hope EDUC 641 provides a smooth on-ramp for everyone
+  + If you're struggling, come talk to me
+  + If the course is too basic, consider the R Bootcamp extension activities (it will get more challenging)
+- Induct you into a graduate-level focus on mastery, rather than an undergraduate-level focus on success
+
+---
+# Me
+
+.pull-left[
+- David Liebowitz (aka, "David" or "Dr. Liebowitz")
+- he/him
+- English lit undergrad major
+- Former ELA teacher and principal
+- Policy analyst/advisor
+- **Applied** quantitative social scientist focused on improving leadership and policy in schools serving low-family-income and racially minoritized students
+- **Not** a methodologist
+]
+
+.pull-right[
+```{r, echo=F}
+include_graphics("kids.jpg")
+```
+]
+
+--
+
+.small[*Personal interests: I work and have kids, so I have no life, but when I can, I try to go for runs or play in the Cascade range.*]
 
 ---
 # Roadmap of EDUC 641
@@ -171,6 +211,8 @@ class: middle, inverse
 ### 7. Peer-reviewed
 
 ]
+
+
 ---
 # Three facets of research
 
@@ -209,6 +251,10 @@ class: middle, inverse
 - Make sure you master content from EDUC 612, particularly concepts of: 
  + measurement, internal and external validity
 - Strongly encourage you to consider courses in advanced research design (EDUC 646, EDLD 650, EDLD 679) after completing the quantitative EDUC sequence
+
+--
+
+.blue[*You will explore (or have explored) these concepts in much more detail through EDUC 612. This is sort of like research design in 15 minutes.*]
 
 ---
 class: middle, inverse
