--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -98,7 +98,7 @@ Final grades will be based on the following components:
 - Final: 30%
 
 ## Quizzes
-Five classes will begin with a very short multiple-choice quiz that is designed to test your knowledge of the theoretical principles underlying the statistics we are studying for the week. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). After we have covered each topic, you should review your lecture notes and ensure that you understand the core substantive content, referencing LSWR to help clarify any fuzziness. The quizzes will cover the substance of material introduced in class only. Quizzes will be open book, notes and computer. Students who are absent and miss a quiz have until the end of the week to complete the quiz on Canvas.
+Five classes will include a very short multiple-choice quiz that is designed to test your knowledge of the theoretical principles underlying the statistics and analytic strategies we have covered in the previous classes. The goal of these quizzes is to serve as a gentle nudge to you to make sure you have fully understood and internalized the content we have covered. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). After we have covered each topic, you should review your lecture notes and ensure that you understand the core substantive content, referencing LSWR to help clarify any fuzziness. The quizzes will cover the substance of material introduced in class only. Quizzes will be open book, notes and computer. Students who are absent and miss a quiz have until the end of the week to complete the quiz on Canvas.
 
 ## Assignments
 The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. 
@@ -124,7 +124,7 @@ Graduate students are expected to perform work of high quality and quantity, typ
 # Common Course Policies
 
 ## Indigenous Recognition Statement
-The University of Oregon is located on Kalapuya Ilihi, the traditional indigenous homeland of the Kalapuya people. Today, descendants are citizens of the Confederated Tribes of the Grand Ronde Community of Oregon and the Confederated Tribes of the Siletz Indians of Oregon, and they continue to make important contributions in their communities, at UO, and across the land we now refer to as Oregon.
+The University of Oregon is located on Kalapuya Ilihi, the traditional indigenous homeland of the Kalapuya people. Today, descendants are citizens of the Confederated Tribes of the Grand Ronde Community of Oregon and the Confederated Tribes of Siletz Indians of Oregon, and they continue to make important contributions in their communities, at UO, and across the land we now refer to as Oregon.
 
 ## Graduate assistants
 If you are concurrently taking any courses with the GEs assigned to this course, please let David Liebowitz know. The GEs will not be involved with any review of assignments for students in this course who are taking other courses concurrently.
@@ -174,7 +174,7 @@ Specific details about confidentiality of information and reporting obligations 
 
 
 ## Mandatory Reporter Status
-I am a student-directed employee. For information about my reporting obligations as an employee, please see Employee Reporting Obligations on the Office of Investigations and Civil Rights Compliance (OICRC) website. Students experiencing any form of prohibited discrimination or harassment, including sex or gender-based violence, may seek information and resources at safe.uoregon.edu, respect.uoregon.edu, or investigations.uoregon.edu or contact the non-confidential Title IX office/Office of Civil Rights Compliance (541-346-3123), or Dean of Students offices (541-346-3216), or call the 24-7 hotline 541-346-SAFE for help. I am also a mandatory reporter of child abuse. Please find more information at Mandatory Reporting of Child Abuse and Neglect
+I am an assisting employee. For information about my reporting obligations as an employee, please see Employee Reporting Obligations on the Office of Investigations and Civil Rights Compliance (OICRC) website. Students experiencing any form of prohibited discrimination or harassment, including sex or gender-based violence, may seek information and resources at safe.uoregon.edu, respect.uoregon.edu, or investigations.uoregon.edu or contact the non-confidential Title IX office/Office of Civil Rights Compliance (541-346-3123), or Dean of Students offices (541-346-3216), or call the 24-7 hotline 541-346-SAFE for help. I am also a mandatory reporter of child abuse. Please find more information at Mandatory Reporting of Child Abuse and Neglect
 
 ## Academic Integrity
 The University Student Conduct Code (available at conduct.uoregon.edu) defines academic misconduct. Students are prohibited from committing or attempting to commit any act that constitutes academic misconduct. By way of example, students should not give or receive (or attempt to give or receive) unauthorized help on assignments or examinations without express permission from the instructor. Students should properly acknowledge and document all sources of information (e.g. quotations, paraphrases, ideas) and use only the sources and resources authorized by the instructor. If there is any question about whether an act constitutes academic misconduct, it is the students’ obligation to clarify the question with the instructor before committing or attempting to commit the act. Additional information about a common form of academic misconduct, plagiarism, is available at [https://researchguides.uoregon.edu/citing-plagiarism](https://researchguides.uoregon.edu/citing-plagiarism)
