--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -29,7 +29,7 @@ Objectives:
 
 Readings: 
 
-- Complete **prior to Sept. 29** class: [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/issue/92/frontiers/how-eugenics-shaped-statistics)
+- Complete **prior to Sept. 29** class: [LSWR Chapters 2 and 3](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Clayton 2020](https://nautil.us/how-eugenics-shaped-statistics-238014/)
 
 Lectures:
 
@@ -54,15 +54,18 @@ Readings:
 
 Lectures: 
 
-- Class 3 (10/4) slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf) 
-- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv)
-- R code: [R script](./slides/EDUC641_3_code.R)
+- Class 3 (10/4) slides: 
+<!-- [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf)  -->
+- Data: 
+<!-- [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) -->
+- R code: 
+<!-- [R script](./slides/EDUC641_3_code.R) -->
 
 Assignment 1: 
 
 - Due: October 10, 11:59pm
-- [html file](./assignments/assignment01.html)
-- [cat.csv dataset](./data/cat.csv)
+<!-- - [html file](./assignments/assignment01.html) -->
+<!-- - [cat.csv dataset](./data/cat.csv) -->
 
 ## Unit 2
 
@@ -83,18 +86,22 @@ Readings:
 
 Lectures:
 
-- Classes 4-5 (10/6 and 10/11) slides: [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf)
-- Class 6 (10/13) slides: [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf)
+- Classes 4-5 (10/6 and 10/11) slides: 
+<!-- [html](./slides/EDUC641_4_categrel.html) | [pdf](./slides/EDUC641_4_categrel.pdf) -->
+- Class 6 (10/13) slides: 
+<!-- [html](./slides/EDUC641_6_history.html) | [pdf](./slides/EDUC641_6_history.pdf) -->
 
 
-- Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv)
-- R code: [R script](./slides/EDUC641_4_code.R) 
+- Data: 
+<!-- [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv) -->
+- R code: 
+<!-- [R script](./slides/EDUC641_4_code.R)  -->
  
 Assignment 2: 
 
 - Due: October 19, 11:59pm
-- [html file](./assignments/assignment02.html)
-- [cat.csv dataset](./data/cat.csv)
+<!-- - [html file](./assignments/assignment02.html) -->
+<!-- - [cat.csv dataset](./data/cat.csv) -->
 
 ## Unit 3
 
@@ -121,18 +128,22 @@ Readings:
 
 Lecture slides: 
 
-- Classes 7-9 (10/18, 10/20 & 10/25) slides: [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf)
-- Classes 10-13 (10/27, 11/1, 11/3 & 11/8) slides: [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf)
+- Classes 7-9 (10/18, 10/20 & 10/25) slides: 
+<!-- [html](./slides/EDUC641_7_continuousdescr.html) | [pdf](./slides/EDUC641_7_continuousdescr.pdf) -->
+- Classes 10-13 (10/27, 11/1, 11/3 & 11/8) slides: 
+<!-- [html](./slides/EDUC641_10_inference.html) | [pdf](./slides/EDUC641_10_inference.pdf) -->
 
 
-- Data: [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R Script](./slides/EDUC641_7_code.R)
+- Data: 
+<!-- [life_expectancy.csv](./data/life_expectancy.csv) -->
+- R code: 
+<!-- [R Script](./slides/EDUC641_7_code.R) -->
 
 Assignment 3: 
 
 - Due: November 7, 11:59pm
-- [html file](./assignments/assignment03.html)
-- [cont.csv dataset](./data/cont.csv)
+<!-- - [html file](./assignments/assignment03.html) -->
+<!-- - [cont.csv dataset](./data/cont.csv) -->
 
 
 ## Unit 4
@@ -157,27 +168,31 @@ Readings:
 
 Lecture slides: 
 
-- Classes 14-16 (11/10, 11/15 & 11/22) slides: [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf)
+- Classes 14-16 (11/10, 11/15 & 11/22) slides: 
+<!-- [html](./slides/EDUC641_14_continuousrel.html) | [pdf](./slides/EDUC641_14_continuousrel.pdf) -->
   + **No class on 11/17 (David traveling for conference) and 11/24 (university holiday)**
 
-- Data: [life_expectancy.csv](./data/life_expectancy.csv)
-- R code: [R script](./slides/EDUC641_14_code.R) 
+- Data: 
+<!-- [life_expectancy.csv](./data/life_expectancy.csv) -->
+- R code: 
+<!-- [R script](./slides/EDUC641_14_code.R)  -->
 
 Assignment 4: 
 
 - Due Nov. 28, 11:59pm
-- [html file](./assignments/assignment04.html)
-- [cont.csv](./data/cont.csv)
+<!-- - [html file](./assignments/assignment04.html) -->
+<!-- - [cont.csv](./data/cont.csv) -->
 
 ## Unit 5
 
-- Classes 17-18 (11/29 & 12/1): [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf)
+- Classes 17-18 (11/29 & 12/1): 
+<!-- [html](./slides/EDUC641_17_critiques.html) | [pdf](./slides/EDUC641_17_critiques.pdf) -->
 
 - Data management cheat sheet: [pdf]
 
 ## Final Assignment
 
  * Due December 7 at 11:59pm
- * [html file](./assignments/assignment05.html)
- * [ah01.csv](./data/ah01.csv); [ah02.csv](./data/ah02.csv)
+ <!-- * [html file](./assignments/assignment05.html) -->
+ <!-- * [ah01.csv](./data/ah01.csv); [ah02.csv](./data/ah02.csv) -->
 
