--- a/assignments.Rmd
+++ b/assignments.Rmd
@@ -38,7 +38,7 @@ Objectives of this assignment
 
  * Create visualizations of categorical data
 
-Deadline: TBD
+Deadline: October 10, 11:59pm
 
 Download: 
 <!-- [html file](./assignments/assignment01.html); [cat.csv dataset](./data/cat.csv) -->
@@ -61,7 +61,7 @@ Objectives of this assignment
  
  * Interpret and report the results of a contingency-table analysis and a statistical inference from a chi-squared statistic
 
-Deadline: TBD
+Deadline: October 19, 11:59pm
 
 Download: 
 <!-- [html file](./assignments/assignment02.html); [cat.csv dataset](./data/cat.csv) -->
@@ -78,7 +78,7 @@ Objectives of this assignment
 
  * Create visualizations of continuous data
 
-Deadline: TBD
+Deadline: November 7, 11:59pm
 
 Download: 
 <!-- [html file](./assignments/assignment03.html); [cont.csv dataset](./data/cont.csv) -->
@@ -89,7 +89,7 @@ Key: [doc file]; [R script]
 
 Continuous data 2: intro to bivariate regression
 
-Deadline: TBD
+Deadline: November 28, 11:59pm
 
 Download: 
 <!-- [html file](./assignments/assignment04.html); [cont.csv dataset](./data/cont.csv) -->
@@ -101,7 +101,7 @@ Key: [doc file]; [R script]
 
 Final assignment 
 
-Deadline: TBD
+Deadline: December 7, 11:59pm
 
 Download: 
 <!-- [html file](./assignments/assignment05.html); [ah01.csv dataset](./data/ah01.csv); [ah02.csv dataset](./data/ah02.csv) -->
